[package]
name = "creativity"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Yunseo Jeong <jys5440@gmail.com>"
]
edition = "2018"
description = "Creative Coding Framework based on Entity Component System (ECS) written in Rust"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]